fix: missing spaces after colons and set semicolons

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     font-family: fantasy, cursive;
 }
 
-@media (max-width:768px) {
+@media (max-width: 768px) {
 .eisenhower-matrix-info { text-align: center;
 }
 }
@@ -35,14 +35,15 @@ body {
     display: flex;
 }
 ul {
-    margin:0;
+    margin: 0;
     padding: 0px;
 }
 li, h3 {
-    list-style:none;
+    list-style: none;
 }
-input,button{
-    outline:none;
+input,
+button{
+    outline: none;
 }
 button {
     background: none;
@@ -118,7 +119,7 @@ li > label {
     font-size: 18px;
     width: 226px;
 }
-li >    input[type="text"] {
+li > input[type="text"] {
     width: 226px
 }
 li > button.delete:hover {
@@ -129,7 +130,8 @@ button.delete img {
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+button.delete 
+img:hover {
     transform: rotateZ(0);
 }
 
@@ -140,15 +142,21 @@ ul#completed-tasks label {
 }
 
 /* Edit Task */
-ul li input[type=text] {
-    display:none;
+ul 
+li 
+input[type=text] {
+    display: none;
 }
 
-ul li.edit-mode input[type=text] {
-    display:inline-block;
-    width:224px;
+ul 
+li.edit-mode 
+input[type=text] {
+    display: inline-block;
+    width: 224px;
 }
 
-ul li.edit-mode label {
-    display:none;
+ul 
+li.edit-mode 
+label {
+    display: none;
 }
